--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
     </style>
+    <script src="index.js" defer></script> 
+    <!---->
     <link rel="stylesheet" href="style.css">
     <title>WeatherNews</title>
 </head>
