--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
     </style>
     <script src="index.js" defer></script> 
-    <!---->
+    <!--The defer attribute is a boolean attribute.
+        When present, it specifies that the script is executed when the page has finished parsing.
+
+        Note: The defer attribute is only for external scripts (should only be used if the src attribute is present).-->
+
+
     <link rel="stylesheet" href="style.css">
     <title>WeatherNews</title>
 </head>
@@ -24,11 +29,11 @@
         </div>
         <div class="not-found">
             <img src="images/404.png">
-            <p>Oops! Invalid location :/</p>
+            <p>Oops! Invalid location.</p>
         </div>
         
         <div class="weather-box">
-            <img src="">
+            <img src=''>
             <p class="temperature"></p>
             <p class="description"></p>
         </div>
